--- a/main.tex
+++ b/main.tex
@@ -401,7 +401,7 @@
     \vfill
     \centering
     \begin{beamercolorbox}[sep=20pt, center, shadow=true, rounded=true]{title}
-      \usebeamerfont{title}\textsc{\insertsectionhead}\par % Use \textsc for small caps
+      \usebeamerfont{title}\textsc{\insertsection}\par % Changed from \insertsectionhead to \insertsection for short title
     \end{beamercolorbox}
     \vfill
   \end{frame}
@@ -413,6 +413,7 @@
   % Restore the logo after the section title slide.
   % \logo{\includegraphics[height=0.4cm]{path/to/logo.png}}
 }
+
 
 % ===========================================================
 %               Custom Command Definitions
